# juce-simple-lfo-filter

./: .gitignore  CMakeLists.txt
source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
